--- a/index.html
+++ b/index.html
@@ -1313,9 +1313,9 @@
                     const data = JSON.parse(evt.target.result);
                     // Accept either array (legacy) or new trip object
                     if (Array.isArray(data)) {
-                        trip = { name: '', description: '', days: data };
+                        trip = { name: '', description: '', days: data, todos: [] };
                     } else if (data && typeof data === 'object' && Array.isArray(data.days)) {
-                        trip = { name: data.name || '', description: data.description || '', days: data.days };
+                        trip = { name: data.name || '', description: data.description || '', days: data.days, todos: Array.isArray(data.todos) ? data.todos : [] };
                     } else {
                         showToast('קובץ לא תקין', true);
                         return;
